--- a/Gori/Main.storyboard
+++ b/Gori/Main.storyboard
@@ -921,12 +921,12 @@
                                                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="125-a2-QYw">
-                                                                        <rect key="frame" x="187" y="155" width="1" height="90"/>
+                                                                        <rect key="frame" x="187" y="110" width="1" height="90"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Rm-bj-9h5">
-                                                                        <rect key="frame" x="186" y="227" width="2" height="90"/>
+                                                                        <rect key="frame" x="186" y="227" width="1" height="90"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </view>
@@ -1214,7 +1214,7 @@
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     </mapView>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leY-KJ-oeP">
-                                                                        <rect key="frame" x="0.0" y="270" width="375" height="50"/>
+                                                                        <rect key="frame" x="0.0" y="285" width="375" height="50"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     </stackView>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ua4-fa-1Tn">
@@ -1346,7 +1346,7 @@
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="700" id="xrQ-s7-2pR"/>
+                                                                    <constraint firstAttribute="height" constant="650" id="xrQ-s7-2pR"/>
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="adD-73-pnc">
@@ -1981,10 +1981,10 @@
         <image name="sign.png" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="6ed-Na-bTL"/>
+        <segue reference="ZTz-Dv-kBt"/>
         <segue reference="7vF-rB-vfR"/>
         <segue reference="Fjc-8S-uYf"/>
-        <segue reference="ZTz-Dv-kBt"/>
-        <segue reference="hZf-is-O1p"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.90980392160000001" green="0.1764705882" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
